# gamescope

./: .gitmodules  Distribution-specific-instructions.md  Gamescope-session.md  Home.md  Quirky-games.md  README.md  Tracing.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  feature_request.yml
.github/workflows/: main.yml
config/: 5000-gamescope.valve.steamdeck-oled.json  5050-gamescope.valve.steamdeck-lcd.json  6000-gamescope.deckhd-unofficial.steamdeck.json  7000-gamescope.asus.rogally.json  README.md
layer/: VkLayer_FROG_gamescope_wsi.cpp  xcb_helpers.hpp
scripts/00-gamescope/displays/: asus.rogally.lcd.lua  lenovo.legion-go-s.lcd.lua  lenovo.legiongo.lcd.lua  onexplayer.x1pro.lcd.lua
session/: gamescope-session  meson.build  steamos-session-select
src/: InputEmulation.cpp  SceneGraph.h  backend.cpp  drm.cpp  drm_include.h  edid.cpp  gamescope_hud.cpp  main.cpp  mangoapp.cpp  meson.build  steamcompmgr.cpp  steamcompmgr.hpp  wlserver.cpp
src/Backends/: DRMBackend.cpp  WaylandBackend.cpp
src/Script/: Script.cpp
src/Utils/: Config.cpp  Config.h
